# graphdb-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
src/live_demos/ashleigh_faith_dec_2024/: .gitignore  docker-compose.yml  interstellar.py  requirements.txt
src/presentations/georgian_tl_jun_2024/: README.md  demo_1.ipynb  demo_2.ipynb  demo_3.ipynb  docker-compose.yml  requirements.txt
src/presentations/mindstone_ai_2024-07-09/: demo_1.ipynb  demo_2.ipynb  demo_3.ipynb  docker-compose.yml  requirements.txt
src/python/copy_from_duckdb/: .gitignore  README.md  docker-compose.yml  generate_travel_data.py  insert_duckdb.py  insert_kuzu.py
src/python/copy_from_postgres/: .gitignore  README.md  analyze.py  copy_pg_to_kuzu.py  insert_data_pg.py  requirements.txt  run_all.sh
src/python/copy_to_postgres/: README.md  copy_pg_to_kuzu.py  docker-compose.yml  insert_data_pg.py
src/python/graph_rag/: README.md  create_graph.py  docker-compose.yml  graph_rag.py  pyproject.toml
src/python/graph_rag/data/interstellar/: acted_in.csv  actor.csv  character.csv  directed.csv  played.csv  played_role_in.csv  related_to.csv
src/python/similarity_search/: .gitignore  README.md  import_data.py  items.parquet  persons.parquet  purchased.parquet  requirements.txt  search.py
src/python/transactions/: .gitignore  README.md  load_data.py  query.py  requirements.txt  util.py
src/python/transactions_with_disputes/: README.md  analyze.py  docker-compose.yml  load_data.py  mark_disputed_transactions.py  requirements.txt
src/talks/georgian_tl_jun_2024/: .gitignore  README.md  (+1 more)
(+57 files in other folders)
