[project]
name = "kuzu-debug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ell-ai>=0.0.14",
    "kuzu>=0.6.1",
    "openai>=1.52.2",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
